Update FillRingList.java
new features and refactoring